--- a/index1.html
+++ b/index1.html
@@ -28,7 +28,7 @@
                 </nav>
 
                 <video autoplay loop muted plays-inline class="back-video">
-                    <source src="vid.mp4" type="video/mp4">
+                    <source src="img/vid.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
 
