remove ".../depoy" text from index1.html to show the social media icons

--- a/index1.html
+++ b/index1.html
@@ -129,9 +129,9 @@
                 </p>
             <div class="icon">
             <div class="links">
-                <a href="https://facebook.com"><img src="../deploy/img/telegram.png"></a>
-                <a href="https://twitter.com"><img src="../deploy/img/twitter.png"></a>
-                <a href="https://telegram.com"><img src="../deploy/img/facebook.png"></a>
+                <a href="https://facebook.com"><img src="img/telegram.png"></a>
+                <a href="https://twitter.com"><img src="img/twitter.png"></a>
+                <a href="https://telegram.com"><img src="img/facebook.png"></a>
             </div>
             </div>
                 <p>Created by <i class="bi bi-keyboard"></i> Jean</p>
